<resources>
    <string name="app_name">WizBook</string>
    <string name="char_name"></string>
    <string name="class_build">CLASS GOES HERE</string>
    <string name="spell_slots">Spell Slots</string>
    <string name="slots_format">FORMATTED SLOT BLOCK</string>
    <string name="long_rest">LONG REST</string>
    <string name="create_character"><b>Character Maker</b></string>
    <string name="choose_class">Choose your classes and their levels</string>
    <string name="artificer">Artificer</string>
    <string name="bard">Bard</string>
    <string name="cleric">Cleric</string>
    <string name="druid">Druid</string>
    <string name="fighter">Eldritch Knight</string>
    <string name="monk">Monk</string>
    <string name="paladin">Paladin</string>
    <string name="ranger">Ranger</string>
    <string name="rogue">Arcane Trickster</string>
    <string name="sorcerer">Sorcerer</string>
    <string name="warlock">Warlock</string>
    <string name="wizard">Wizard</string>
    <string name="name_hint">Character Name</string>
    <string name="choose_lvls">Choose your class levels</string>
    <string name="artificer_lvl"></string>
    <string name="bard_lvl"></string>
    <string name="cleric_lvl"></string>
    <string name="sorcerer_lvl"></string>
    <string name="ranger_lvl"></string>
    <string name="wizard_lvl"></string>
    <string name="warlock_lvl"></string>
    <string name="fighter_lvl"></string>
    <string name="druid_lvl"></string>
    <string name="monk_lvl"></string>
    <string name="rogue_lvl"></string>
    <string name="paladin_lvl"></string>
    <string name="create">Create!</string>
    <string name="lvl_hint">0</string>
    <string name="final_name">NAME GOES HERE</string>
    <string name="tabKnown">Known</string>
    <string name="tabPrepared">Prepared</string>
    <string name="tabSpells">Spells</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_known_fragment">Hello known fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_prepared_fragment">Hello prepared fragment</string>
    <string name="hello_spells_fragment">Hello spells fragment</string>
    <string name="add_spell">+</string>
    <string name="cast_spell">CAST</string>
    <string name="divider">sets a divider</string>
    <string name="spell_placeholder">SPELL</string>
    <string name="school_placeholder">SCHOOL</string>
    <string name="special_placeholder">SPECIAL</string>
    <string name="level_placeholder">LEVEL</string>
    <string name="subtract_spell">-</string>
    <string name="spell_info">INFO</string>
    <string name="new_character">NEW CHAR.</string>
</resources>