<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/final_name"
        android:textColor="@color/purple_200"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="77dp"
        android:layout_height="54dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:onClick="onLongRest"
        android:text="@string/long_rest"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="235dp"
        android:layout_height="56dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:text="@string/class_build"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="318dp"
        android:layout_height="43dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="80dp"
        android:text="@string/slots_format"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/ViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="124dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabSpells"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabSpells" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabKnown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabKnown" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabPrepared"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabPrepared" />

        </com.google.android.material.tabs.TabLayout>
    </androidx.viewpager.widget.ViewPager>

    <Button
        android:id="@+id/button"
        android:layout_width="77dp"
        android:layout_height="52dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:onClick="onMakeChar"
        android:text="@string/new_character"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>