<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/spell_name_spell"
        android:layout_width="342dp"
        android:layout_height="19dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/spell_placeholder"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/add_button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/spell_school_spell"
        android:layout_width="137dp"
        android:layout_height="17dp"
        android:text="@string/school_placeholder"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/spell_name_spell"
        app:layout_constraintTop_toBottomOf="@+id/spell_name_spell" />

    <TextView
        android:id="@+id/spell_special_spell"
        android:layout_width="345dp"
        android:layout_height="21dp"
        android:text="@string/special_placeholder"
        app:layout_constraintStart_toStartOf="@+id/spell_school_spell"
        app:layout_constraintTop_toBottomOf="@+id/spell_school_spell" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/add_spell"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/spell_school_spell"
        app:layout_constraintEnd_toStartOf="@+id/spell_name_spell"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/spell_level_spell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/level_placeholder"
        app:layout_constraintBaseline_toBaselineOf="@+id/info_spell_spell"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/divider"
        android:paddingLeft="5dp"
        android:paddingTop="2dp"
        android:paddingRight="5dp"
        android:paddingBottom="2dp"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/info_spell_spell"
        android:layout_width="67dp"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="97dp"
        android:layout_marginRight="97dp"
        android:text="@string/spell_info"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/spell_level_spell"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>